services/vm2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm2-web-service
  namespace: galassmyname-dev
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
